--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -5,8 +5,7 @@
   title: "Course Introduction"
 - 
   date: "Week 1: Jan 23"
-  materials: "Your First Hour in UE 5.2 [Epic Link](https://dev.epicgames.com/community/learning/courses/3ke/your-first-hour-in-unreal-engine-5-2/vvdk/your-first-hour-in-unreal-engine-5-2-overview)<br/>
-              [UE 5 Basics](https://dev.epicgames.com/documentation/en-us/unreal-engine/understanding-the-basics-of-unreal-engine)"
+  materials: ""
   title: "Intro to Unreal Engine"
 - 
   date: "Week 2: Jan 28"
@@ -65,7 +64,7 @@
   materials: "Game Design [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture01.pdf)<br/>
               Stardew Valley [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-StardewValley.pdf)<br/>
               Game AI History [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/498-AI-1.pdf) <br/><br/>
-              Lecture [Video](https://mediaspace.illinois.edu/media/t/1_n2rplxlt)<br/>
+              Lecture [Video]()<br/>
                **Optional Viewing:**<br/>
               Rules of the Game:<br/> Five Techniques from Quite Inventive Designers (2016) [YouTube](https://youtu.be/d8QAVGeEj-U?si=Fk8f2ovx1zX7_cEQ)<br/>
               Designing Games for Game Designers (2012) [YouTube](https://youtu.be/ke_kOD2D-bs?si=FazHhxS2jCf3Q6LL)<br/><br/>
@@ -77,7 +76,6 @@
   materials:  
    Pathfinding [Video](https://classtranscribe.illinois.edu/video?id=1fe9cc72-35da-4c92-beaf-90dabec2d268&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/498-AI-3.pdf)
    <br/>A* in Games [Video](https://classtranscribe.illinois.edu/video?id=9464b539-b000-4df0-bc81-398c9935b5ad&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/498-AI-4.pdf) <br/>
-    **PrairieLearn HW 2 [Link](https://us.prairielearn.com/pl/course_instance/161595/assessment/2443570)**
    <br/><br/>
     **Optional Reading**<br/>
     AI for Games 3rd Edition by Ian Millington Sections 4.1 to 4.3<br/>
