--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -5,8 +5,8 @@
   title: "Course Introduction"
 - 
   date: "Week 1: Jan 23"
-  materials: "Cursed Problems in Game Design GDC 2019 [YouTube](https://www.youtube.com/watch?v=8uE6-vIi1rQ)<br/>
-              Practical Law 101 For Indie Developers: Not Scary Edition GDC 2016 [YouTube](https://www.youtube.com/watch?v=8eAW-7Js7NA)"
+  materials: "Cursed Problems in Game Design GDC 2019 [YouTube](https://www.youtube.com/watch?v=8uE6-vIi1rQ)<br/><br/>
+              Practical Law 101 For Indie Developers: Not Scary Edition GDC 2016 <br/>[YouTube](https://www.youtube.com/watch?v=8eAW-7Js7NA)"
   title: "Game Design and IP Law"
 - 
   date: "Week 2: Jan 28"
