--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -12,7 +12,7 @@
   date: "Week 2: Jan 28"
   materials: "Art: Assets [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-ArtOverview.pdf) <br/>
               UE5 Features [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf)<br/>
-              Lecture [Video]() <br/><br/>
+              Lecture [Video](https://mediaspace.illinois.edu/media/t/1_7m5rte1e) <br/><br/>
               **Optional Reading:**<br/>
                Fundamentals of Computer Graphics Ch 12<br/>
                [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955292160105899)<br/>
