--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -84,7 +84,7 @@
   title: "Game AI"
 - 
   date: "Week 6: Feb 25"
-  materials: "AI: Tactical Waypoints [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-AI-5pptx.pdf)<br/>
+  materials: "AI: Tactical Waypoints [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-AI-5.pptx.pdf)<br/>
               Graphics: Rasterization [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Rasterization.pdf)<br/> 
               Lecture [Video]() <br/>
               "
