--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -86,7 +86,7 @@
   date: "Week 6: Feb 25"
   materials: "AI: Tactical Waypoints [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-AI-5.pptx.pdf)<br/>
               Graphics: Rasterization [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Rasterization.pdf)<br/> 
-              Lecture [Video]() <br/>
+              Lecture [Video](https://mediaspace.illinois.edu/media/t/1_vet5wy91) <br/>
               "
   title: "Rendering"
 -
