--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -98,7 +98,7 @@
   title: "Rendering"
 -
   date: "Week 7: Mar 4"
-  materials: "Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Shading.pdf) [Video](https://mediaspace.illinois.edu/media/t/1_gsavl3ef)<br/>
+  materials: "Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Shading2025.pdf) [Video](https://mediaspace.illinois.edu/media/t/1_3vb3yrjf)<br/>
               <br/><br/>
     
               **Optional Reading:**<br/>
