--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -114,8 +114,8 @@
   title: "Rendering"
 -
   date: "Week 8: Mar 11"
-  materials: "**11am Central Time [Exam Link]()**<br/><br/>
-              **8pm Central Time [Exam Link]()**"
+  materials: "**11am Central Time [Exam Link](https://us.prairielearn.com/pl/course_instance/176404/assessment/2503465)**<br/><br/>
+              **8pm Central Time [Exam Link](https://us.prairielearn.com/pl/course_instance/176404/assessment/2503465)**"
   title: "**EXAM 1**" 
 -
   date: "Week 8: Mar 13"
