--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -119,11 +119,8 @@
   title: "**EXAM 1**" 
 -
   date: "Week 8: Mar 13"
-  materials: "Transformations [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/415-GeometricTransformations.pdf) <br/>
-               [Video]()<br/><br/>
-               **Optional Reading:**<br/>
-               Real-Time Rendering Section 4.1 [PDF](https://drive.google.com/file/d/13Oxmdg7sNspx7C2k2vrz_vmJvPA0bPfS/view?usp=sharing)"
-  title: "Course Project and Animation Basics" 
+  materials: "**Read the Course Project Specification [LINK](https://illinois-cs415.github.io/assignments/project.html)**"
+  title: "Course Project" 
 -
   date: "Week 9: Mar 18"
   materials: "**NO LECTURE**"
@@ -135,16 +132,20 @@
 
 -
   date: "Week 10: Mar 25"
-  materials: "[Video]()<br/>
-               Euler Angles [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-EulerAngles.pdf)<br/>
-               Quaternions [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Quaternions.pdf) <br/><br/>
-                 **Optional Reading:**<br/>
-              Real-Time Rendering Section 4.2 and 4.3<br/>
-              [PDF](https://drive.google.com/file/d/13Oxmdg7sNspx7C2k2vrz_vmJvPA0bPfS/view?usp=sharing)"
+  materials: "Transformations [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/415-GeometricTransformations.pdf) <br/>
+               [Video]()<br/><br/>
+               **Optional Reading:**<br/>
+               Real-Time Rendering Section 4.1 [PDF](https://drive.google.com/file/d/13Oxmdg7sNspx7C2k2vrz_vmJvPA0bPfS/view?usp=sharing)"
   title: "Animation"
 -
   date: "Week 10: Mar 27"
-  materials: "GDC 2021 Talk: 2D Animation for Games: A Primer [YouTube](https://youtu.be/PKZJmHrG4Yw?si=FAHo4VYXrNQjllpa)"
+  materials: "[Video]()<br/>
+               Euler Angles [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-EulerAngles.pdf)<br/>
+               Quaternions [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Quaternions.pdf) <br/><br/>
+                 **Optional:**<br/>
+              Real-Time Rendering Section 4.2 and 4.3<br/>
+              [PDF](https://drive.google.com/file/d/13Oxmdg7sNspx7C2k2vrz_vmJvPA0bPfS/view?usp=sharing)<br/><br/>
+              GDC 2021 Talk: 2D Animation for Games: A Primer [YouTube](https://youtu.be/PKZJmHrG4Yw?si=FAHo4VYXrNQjllpa)"
   title: "Animation" 
 -
   date: "Week 11: Apr 1"
