--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -154,6 +154,7 @@
              [Video]()<br/><br/>
                **Optional Reading:**<br/>
               <br/>
+              Semi-Implicit Euler [Wikipedia](https://en.wikipedia.org/wiki/Semi-implicit_Euler_method)<br/>
               Game Physics Engine Development <br/>
               [Chapter 2](https://drive.google.com/file/d/15rbVjENuzwyIsyxTz7fdXmYbgVmLLBRv/view?usp=drive_link), 
               [Chapter 3](https://drive.google.com/file/d/1c3wBNYdKwgASDmvMMGfg2htjLAihdre3/view?usp=drive_link), 
