--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -151,7 +151,7 @@
   date: "Week 11: Apr 1"
   materials: "Physics Engine Basics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PhysicsEngine.pdf)<br/>
              Euler Integration [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Euler1.pdf)<br/>
-             [Video]()<br/><br/>
+             [Video](https://mediaspace.illinois.edu/media/t/1_wqgh7rrl/369263532)<br/><br/>
                **Optional Reading:**<br/>
               <br/>
               Semi-Implicit Euler [Wikipedia](https://en.wikipedia.org/wiki/Semi-implicit_Euler_method)<br/>
