--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -139,7 +139,7 @@
   title: "Animation"
 -
   date: "Week 10: Mar 27"
-  materials: "[Video](ttps://classtranscribe.illinois.edu/video?id=97c067fb-ae72-450a-91ee-02cf42666c78&from=sharedlink)<br/>
+  materials: "[Video - 2024 lecture](https://mediaspace.illinois.edu/media/t/1_hjgz6db)<br/>
                Euler Angles [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-EulerAngles.pdf)<br/>
                Quaternions [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Quaternions.pdf) <br/><br/>
                  **Optional:**<br/>
