--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -171,13 +171,13 @@
 -
   date: "Week 12: Apr 8"
   materials: "Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide1.pdf)<br/>
-              Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf)<br/> 
+              Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim2025.pdf)<br/> 
               [Video]()"
   title: "Game Physics" 
 -
   date: "Week 12: Apr 10"
   materials: " Eric Haines Ray Tracing Intro [Link](https://developer.nvidia.com/blog/ray-tracing-essentials-part-1-basics-of-ray-tracing/)<br/><br/>
-               **PrairieLearn HW 5 Assigned [Link](https://us.prairielearn.com/pl/course_instance/161595/assessment/2443574)**<br/><br/>
+               **PrairieLearn HW 5 Assigned [Link]()**<br/><br/>
               **Optional Reading:**<br/>
               Fundamentals of Computer Graphics Chapter 4<br/>
               [PDF](https://drive.google.com/file/d/13Oxmdg7sNspx7C2k2vrz_vmJvPA0bPfS/view?usp=sharing)"
