--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -170,36 +170,36 @@
   title: "Game Physics" 
 -
   date: "Week 12: Apr 8"
-  materials: "Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide1.pdf)<br/>
-              Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim2025.pdf)<br/> 
-              [Video]()"
+  materials: "Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim2025.pdf)<br/> 
+              [Video](https://mediaspace.illinois.edu/media/t/1_axeelobz/369263532)"
   title: "Game Physics" 
 -
   date: "Week 12: Apr 10"
-  materials: " Eric Haines Ray Tracing Intro [Link](https://developer.nvidia.com/blog/ray-tracing-essentials-part-1-basics-of-ray-tracing/)<br/><br/>
+  materials: " Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide1.pdf)<br/>
+  title: "Physics: Collision Detection" 
+-
+  date: "Week 13: Apr 15"
+  materials: "Ray Tracing Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-RayTracing.pdf) <br/>
+               [Video]()<br/>
+                Eric Haines Ray Tracing Intro [Link](https://developer.nvidia.com/blog/ray-tracing-essentials-part-1-basics-of-ray-tracing/)<br/><br/>
                **PrairieLearn HW 5 Assigned [Link]()**<br/><br/>
               **Optional Reading:**<br/>
               Fundamentals of Computer Graphics Chapter 4<br/>
               [PDF](https://drive.google.com/file/d/13Oxmdg7sNspx7C2k2vrz_vmJvPA0bPfS/view?usp=sharing)"
+               "
   title: "Graphics: Ray Tracing" 
--
-  date: "Week 13: Apr 15"
-  materials: "Ray Tracing Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-RayTracing.pdf) <br/>
-               UE5 Lumen [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5 Lumen.pdf)<br/>
-               [Video]()<br/>"
-  title: "Graphics: UE5 Lumen" 
 -
   date: "Week 13: Apr 17"
   materials: "GDC/GTC 2022 NVIDIA Real-Time Path Tracing [Talk Video](https://research.nvidia.com/publication/2022-03_Research-Advances-Toward)<br/>"
   title: "Graphics: Real-Time Ray Tracing" 
 -
   date: "Week 14: Apr 22"
-  materials: ""
-  title: "" 
+  materials: " UE5 Lumen [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5 Lumen.pdf)<br/>"
+  title: "UE 5 Lumen" 
 -
   date: "Week 14: Apr 24"
   materials: ""
-  title: ""  
+  title: "UE 5 File Formats "  
 -
   date: "Week 15: Apr 29"
   materials: ""
