--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -175,7 +175,7 @@
   title: "Game Physics" 
 -
   date: "Week 12: Apr 10"
-  materials: " Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide1.pdf)<br/>
+  materials: " Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide1.pdf)<br/>"
   title: "Physics: Collision Detection" 
 -
   date: "Week 13: Apr 15"
