--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -172,7 +172,7 @@
   date: "Week 12: Apr 8"
   materials: "Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim2025.pdf)<br/> 
               [Video](https://mediaspace.illinois.edu/media/t/1_axeelobz/369263532)"
-  title: "Game Physics" 
+  title: "Animation: Kinematics" 
 -
   date: "Week 12: Apr 10"
   materials: " Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide1.pdf)<br/>"
