--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -181,6 +181,7 @@
 -
   date: "Week 13: Apr 15"
   materials: "Ray Tracing Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-RayTracing.pdf) <br/>
+              Collision Detection Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-Collide.pdf) <br/>
                [Video]()<br/>
                 Eric Haines Ray Tracing Intro [Link](https://developer.nvidia.com/blog/ray-tracing-essentials-part-1-basics-of-ray-tracing/)<br/><br/>
                **PrairieLearn HW 5 Assigned [Link](https://us.prairielearn.com/pl/course_instance/176404/assessment/2503471)**<br/><br/>
