--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -195,7 +195,8 @@
 -
   date: "Week 14: Apr 22"
   materials: " 
-   Collision Detection Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-Collide2025.pdf) <br/>"
+   Collision Detection Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-Collide2025.pdf) <br/>
+   [Video](https://mediaspace.illinois.edu/media/t/1_cmg820iu/369263532)"
   title: "Game Physics: Collision Detection" 
 -
   date: "Week 14: Apr 24"
@@ -203,7 +204,7 @@
              **This talk gets pretty complex. Don't worry about understanding it all.**<br/>
               You will understand some and get to see what a core engine dev does"
   
-  title: " "  
+  title: "Game Physics: Collision Detection"  
 -
   date: "Week 15: Apr 29"
   materials: "UE5 Lumen [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5 Lumen.pdf)<br/>"
