--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -209,7 +209,7 @@
 -
   date: "Week 15: Apr 29"
   materials: "UE5 Lumen [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5 Lumen.pdf)<br/>"
-  title: "" 
+  title: "Graphics: Global Illumination" 
 -
   date: "Week 15: May 1"
   materials: "[Creative Future with Artificial Intelligence - GDC 2023 Talk](https://youtu.be/fOqLuWml0UY?si=wXWE04Opl8HpHvVs)"
