--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -209,7 +209,8 @@
 -
   date: "Week 15: Apr 29"
   materials: "UE5 Lumen [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5 Lumen.pdf)<br/>
-              Real-Time Sparse Distance Fields for Games [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/GDC-2023.pdf)"
+              Real-Time Sparse Distance Fields for Games [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/GDC-2023.pdf)<br/>
+              [Video](https://mediaspace.illinois.edu/media/t/1_ksyd06vv/369263532)"
   title: "Graphics: Global Illumination" 
 -
   date: "Week 15: May 1"
