--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -218,7 +218,7 @@
   title: "Game AI" 
 -
   date: "Week 16: May 6"
-  materials: "**11am Central Time [Exam Link]()**<br/><br/>
-              **8pm Central Time [Exam Link]()**"
+  materials: "**11am Central Time [Exam Link](https://us.prairielearn.com/pl/course_instance/176404/assessment/2503466)**<br/><br/>
+              **8pm Central Time [Exam Link](https://us.prairielearn.com/pl/course_instance/176404/assessment/2503466)**"
   title: "**EXAM 2**" 
 -
